/*
 * Copyright (C) 2017 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax="proto2";
package com.dremio.proto.model.physical_dataset;

import "common.proto";
import "file.proto";
import "dataset.proto";

option java_package = "com.dremio.service.namespace.physicaldataset.proto";
option optimize_for = SPEED;

option java_outer_classname = "PhysicalDatasetProtobuf";


message PhysicalDatasetConfig {
  optional string name = 1;
  optional com.dremio.service.namespace.file.proto.FileConfig formatSettings = 2;
  optional com.dremio.service.namespace.dataset.proto.DatasetType type = 3;
  repeated string fullPath = 4;
  optional int64 version = 5;
  optional AccelerationSettingsDescriptor accelerationSettings = 7;
  optional string id = 8;
}

message AccelerationSettingsDescriptor {
  required TimePeriod accelerationTTL = 1;
  optional RefreshMethod method = 2 [default = FULL];
  optional string refreshField = 3;
  repeated string field = 4;
}
